Create user register

--- a/src/app/auth/components/login/login.component.html
+++ b/src/app/auth/components/login/login.component.html
@@ -15,9 +15,9 @@
 
         <app-button text="Entrar"></app-button>
 
-        <p>Ainda nãoo possui conta? <a href=""><i>Crie a sua agora mesmo</i></a></p>
+        <p>Ainda nãoo possui conta? <a [routerLink]="['/user/register']"><i>Crie a sua agora mesmo</i></a></p>
     </form>
     <div class="img">
-        <img src="../../../../assets//login.svg" >
+        <img src="../../../../assets/login.svg" >
     </div>
 </div>
