Create chat behavior

--- a/src/app/chat/components/chat/chat.component.html
+++ b/src/app/chat/components/chat/chat.component.html
@@ -8,7 +8,7 @@
         <div class="messages">
             <app-message *ngFor="let message of messages" [message]="message"></app-message>
         </div>
-        <input class="form-control"  type="text" id="message">
+        <input class="form-control"  type="text" id="message" name="message" [(ngModel)]="messageInput">
         
 
     </div>
