--- a/src/app/chat/components/join-room/join-room.component.html
+++ b/src/app/chat/components/join-room/join-room.component.html
@@ -6,7 +6,7 @@
             <div class="input-group mb-3">
                 <select class="form-select" id="inputGroupSelect01">
                     <option selected disabled>Selecione...</option>
-                    <option *ngFor="let room of rooms">{{room}}</option>
+                    <option *ngFor="let room of rooms">{{room.name}}</option>
                 </select>
             </div>
             <app-button text="Entrar"></app-button>
@@ -20,7 +20,7 @@
         <div>
             <p>Crie sua própria sala</p>
             <div class="input-group mb-3">
-              <input type="text" class="form-control" placeholder="Nome da Sala" aria-label="Username" aria-describedby="basic-addon1">
+              <input type="text" class="form-control" placeholder="Nome da Sala" id="name" name="name" [(ngModel)]="roomName">
             </div>
             <app-button text="Criar"></app-button> 
         </div>
