--- a/src/app/chat/components/chat/chat.component.css
+++ b/src/app/chat/components/chat/chat.component.css
@@ -12,6 +12,7 @@
     padding: 1%;
     color: white;
     font-weight: bolder;
+    border-right: 2px solid #270080;
 }
 .sidebar > h4 {
     border-bottom: 2px solid #270080;
@@ -19,16 +20,34 @@
     margin-bottom: 3%;
 }
 .main-chat {
-    height: 100%;
+    height: 90%;
     width: 70%;
-    border-left: 2px solid #270080;
     padding: 1%;
+
 }
 .main-chat > h5 {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
     border-bottom: 2px solid #270080;
-    padding: 1%;
     margin-bottom: 3%;
     font-weight: bold;
+}
+.main-chat > h5 > img {
+    width: 25px;
+    height: 25px;
+    margin-right: 3%;
+}
+.main-chat > h5 > img:hover {
+    cursor: pointer;
+    transform: scale(1.1);
+}
+.main-messages {
+    height: 90%;
+}
+.messages {
+    height: 100%;
+    overflow-y: scroll;
 }
 input {
     width: 65%;
