--- a/src/app/chat/components/join-room/join-room.component.html
+++ b/src/app/chat/components/join-room/join-room.component.html
@@ -1,15 +1,15 @@
 <div class="main">
     <div class="content">
-        <h3>Bem vindo ao hubla chat</h3>
+        <h3>Bem vindo ao HubLab chat</h3>
         <div>
             <p>Selecione uma sala</p>
             <div class="input-group mb-3">
-                <select class="form-select" id="inputGroupSelect01">
+                <select class="form-select" id="room-select" name="room-select" [(ngModel)]="selectedRoom">
                     <option selected disabled>Selecione...</option>
-                    <option *ngFor="let room of rooms">{{room.name}}</option>
+                    <option *ngFor="let room of rooms" [value]="room.name">{{room.name}}</option>
                 </select>
             </div>
-            <app-button text="Entrar"></app-button>
+            <app-button text="Entrar" (click)="joinRoom()"></app-button>
         
         </div>
         
@@ -22,7 +22,7 @@
             <div class="input-group mb-3">
               <input type="text" class="form-control" placeholder="Nome da Sala" id="name" name="name" [(ngModel)]="roomName">
             </div>
-            <app-button text="Criar"></app-button> 
+            <app-button text="Criar" (click)="create()"></app-button> 
         </div>
     </div>
    
