--- a/src/styles.css
+++ b/src/styles.css
@@ -2,3 +2,8 @@ body {
     font-family: 'Poppins', sans-serif;
     background-color: #E7F3FF;
 }
+.span-invalid  {
+    position: relative;
+    top: -15px;
+    display: block;
+}
